--- a/projects.css
+++ b/projects.css
@@ -98,6 +98,9 @@ body {
 #nine {
     animation: float 2.95s infinite alternate;
 }
+#ten {
+    animation: float 3.05s infinite alternate;
+}
 
 .screen {
     background-color: rgb(0, 150, 200, 15%);
